# IsingModel

./: .gitignore  CMakeLists.txt  README.md  main.cpp  report_notes.txt
report/: isingmodel_BD418.tex
scripts/: critical_temps.py  decorrelations.py  heat_capacity.py  hysteresis.py  visualise_spins.py
simulations/: analysis.cpp  analysis.h  decorrelation.cpp  decorrelation.h  heat_capacity.cpp  heat_capacity.h  hysteresis.cpp  hysteresis.h  mean_magnetisation.cpp  mean_magnetisation.h  run.cpp  run.h  spins.cpp  spins.h  spins_logger.cpp  spins_logger.h  zero_field.cpp  zero_field.h
src/: engine.cpp  engine.h  lattice.cpp  lattice.h  simulation.cpp  simulation.h
